# cpp26_experiments

./: .clang-tidy  .gitattributes  CMakeLists.txt  NOTES.md  README.md  conanfile.py
example/: CMakeLists.txt  args.cpp  echo.cpp  format.cpp  logging.cpp  modules.cpp  plugin.cpp  rpc.cpp  test.cpp
example/plugins/: demo.cpp
include/erl/: args  autoload  autoload.hpp  clock.hpp  info  kwargs.hpp  layout  logger.hpp  logging  optional  plugin  plugin.hpp  print.hpp  reflect  reflect.hpp  rpc.hpp  thread.hpp  tuple  tuple.hpp  version.h
include/erl/_impl/: .gitignore  compile_error.hpp  expect.hpp
include/erl/_impl/config/: annotations.hpp  args.hpp  default_construct.hpp  expect.hpp
include/erl/_impl/format/: named.hpp
include/erl/_impl/log/: format.hpp  logger.hpp  message.hpp
include/erl/_impl/log/format/: color.hpp  log.hpp
include/erl/_impl/log/sinks/: sink.hpp  terminal.hpp
include/erl/_impl/net/: service.hpp  tcp.hpp
include/erl/_impl/plugin/: cinterface.h  impl.hpp
include/erl/_impl/queue/: base.hpp  mpmc_bounded.hpp
include/erl/_impl/rpc/: dispatch.hpp  protocol.hpp  proxy.hpp
include/erl/_impl/util/: concepts.hpp  containers.hpp  meta.hpp  operators.hpp
include/erl/compat/: p1789.hpp
include/erl/config/: annotations.hpp  args.hpp  default_construct.hpp  expect.hpp
include/erl/format/: named.hpp
include/erl/log/: format.hpp  logger.hpp  message.hpp
include/erl/log/format/: color.hpp  log.hpp
include/erl/log/sinks/: sink.hpp  terminal.hpp
include/erl/net/: null.hpp  queue.hpp  rpc.hpp  tcp.hpp
include/erl/net/message/: buffer.hpp  reader.hpp
include/erl/plugin/: impl.hpp
include/erl/queue/: base.hpp  basic.hpp  mpmc_bounded.hpp  spsc_bounded.hpp
include/erl/rpc/: dispatch.hpp  protocol.hpp  proxy.hpp  rpc.hpp
include/erl/threading/: info.hpp
include/erl/util/: concepts.hpp  fixed_string.hpp  hash.hpp  meta.hpp  parser.hpp  string.hpp  trie.hpp
include/experiments/: log.hpp  message.hpp  reflect.hpp  rpc.hpp  tuple.hpp
include/experiments/transport/: tcp.hpp
include/experiments/util/: concepts.hpp  hash.hpp  meta.hpp  stamp.hpp
include/slo/: message.hpp  print.hpp  reflect.hpp  tuple.hpp
include/slo/config/: args.hpp
include/slo/log/: format.hpp  logger.hpp  message.hpp
include/slo/log/sinks/: sink.hpp  terminal.hpp
include/slo/logging/: formatter.hpp  logger.hpp  message.hpp
include/slo/logging/sinks/: sink.hpp  terminal.hpp
include/slo/message/: buffered.hpp  view.hpp
include/slo/net/: message.hpp  rpc.hpp  tcp.hpp
include/slo/net/message/: buffer.hpp  buffered.hpp  reader.hpp
include/slo/net/rpc/: protocol.hpp
include/slo/net/transport/: queue.hpp  tcp.hpp
include/slo/network/transport/: tcp.hpp
include/slo/queue/: base.hpp  basic.hpp  mpmc_bounded.hpp  spsc_bounded.hpp
include/slo/rpc/: protocol.hpp  rpc.hpp
include/slo/threading/: info.hpp
include/slo/transport/: queue.hpp
include/slo/util/: fixed_string.hpp  hash.hpp  meta.hpp
modules/: CMakeLists.txt  erl.cppm
src/: CMakeLists.txt  clock.cpp  dummy.cpp
src/logging/: CMakeLists.txt  logger.cpp
src/net/: tcp.linux.cpp
src/platform/: CMakeLists.txt  library.cpp
src/plugins/: CMakeLists.txt  plugin.cpp
src/threading/: CMakeLists.txt  info.cpp  info.linux.cpp
src/threading/platform/: info.h  info.linux.cpp
